# tinylm

./: .gitignore  Justfile  README.md  blessed_parameters.toml  pyproject.toml
runs/rnn_full/: best.json  config.json  metrics.jsonl
runs/tfm_full/: best.json  config.json  metrics.jsonl  vocab.json
src/llmtalk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tinylm/: __init__.py  __main__.py  cli.py  data.py
src/tinylm/models/: __init__.py  common.py  rnn.py  transformer.py
