[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtalk"
version = "0.1.0"
description = "Tiny language-model demos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.5",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[project.scripts]
tinylm = "tinylm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
